--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^1.2.2",
     "@agm/core": "^1.1.0",
     "@angular/animations": "~13.3.0",
     "@angular/cdk": "^13.3.9",
@@ -21,8 +22,17 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@azure/identity": "^2.1.0",
+    "@azure/msal-angular": "^2.4.1",
+    "@azure/msal-browser": "^2.28.1",
+    "@microsoft/microsoft-graph-client": "^3.0.2",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@types/gapi.auth2": "^0.0.56",
     "@types/googlemaps": "^3.43.3",
+    "angularx-social-login": "^4.1.0",
+    "isomorphic-fetch": "^3.0.0",
+    "msal": "^1.4.17",
+    "readline-sync": "^1.4.10",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -31,9 +41,12 @@
     "@angular-devkit/build-angular": "~13.3.4",
     "@angular/cli": "~13.3.4",
     "@angular/compiler-cli": "~13.3.0",
+    "@microsoft/microsoft-graph-types": "^2.22.0",
     "@types/google.maps": "^3.49.2",
+    "@types/isomorphic-fetch": "^0.0.36",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
+    "@types/readline-sync": "^1.4.4",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
